@@ -1160,7 +1160,7 @@ parse_exp_in_context (char **stringptr, struct block *block, int comma,
   expout->nelts = expout_ptr;
   expout = (struct expression *)
     xrealloc ((char *) expout,
-	      sizeof (struct expression) + EXP_ELEM_TO_BYTES (expout_ptr));;
+	      sizeof (struct expression) + EXP_ELEM_TO_BYTES (expout_ptr));
 
   /* Convert expression from postfix form as generated by yacc
      parser, to a prefix form.  */
